namespace Engine.Components
{
    public class AnimatedSprite
    {
        public Sprite[] Sprites { get; set; }
        public int Ticks { get; set; }
    }
}