namespace Engine.Components
{
    public interface IComponent
    {
         
    }
}