namespace Engine.Components
{
    public class Sprite : IComponent
    {
        public byte[] Image { get; set; }
    }
}