namespace Engine.Systems
{
    public interface ICleanSystem : ISystem
    {
         void Clean();
    }
}