namespace Engine.Systems
{
    public interface IInitSystem : ISystem
    {
         void Init();
    }
}