namespace Engine.Systems
{
    public interface ISystem
    {
    }
}